# Engine

./: .gitignore  CMakeLists.txt  Makefile  todo
assets/shaders/: tileFragmentShader.glsl  tileVertexShader.glsl
include/: globals.h  shaderManager.h  tile.h
include/glad/: glad.h
libs/inc/: camera.h  game.h  resourceManger.h  shader.h  texture.h  window.h
src/: camera.cpp  game.cpp  glad.c  globals.cpp  main.cpp  resourceManager.cpp  shader.cpp  shaderManager.cpp  texture.cpp  tile.cpp  todo.txt  window.cpp
